@@ -99,6 +99,8 @@ xs/Image.xs
 xs/include/FLTK_pm.h
 xs/include/GlWindowSubclass.h
 xs/include/ppport.h
+xs/include/RectangleSubclass.h
+xs/include/TabGroupPagerSubclass.h
 xs/include/WidgetSubclass.h
 xs/Input.xs
 xs/InputBrowser.xs
@@ -149,6 +151,7 @@ xs/StatusBarGroup.xs
 xs/Style.xs
 xs/Symbol.xs
 xs/TabGroup.xs
+xs/TabGroupPager.xs
 xs/TextBuffer.xs
 xs/TextDisplay.xs
 xs/TextDisplay/StyleTableEntry.xs
